--- a/admin/src/app/layout/admin-layout/admin-layout.component.html
+++ b/admin/src/app/layout/admin-layout/admin-layout.component.html
@@ -1,6 +1,6 @@
 <!-- admin-layout.component.html -->
 
-<div class="container">
+<div class="container tw-min-h-[90vh]">
   <div class="page-inner" style="margin-top: 69px">
     <router-outlet />
   </div>
