--- a/admin/src/app/features/comment/comment.component.html
+++ b/admin/src/app/features/comment/comment.component.html
@@ -27,6 +27,14 @@
     (viewReplyPopup)="onPopupOpen(false, $event)"
   ></app-comment-list>
 
+  <!--- Phân trang -->
+  <app-pagination
+    [total]="filter.total"
+    [limit]="filter.limit"
+    [page]="filter.page"
+    (pageChange)="onPageChange($event)"
+  />
+
   <!-- popup xem chi tiết -->
   <app-comment-detail-popup
     [comment]="selectedComment"
