--- a/admin/src/app/features/content-type/content-type.component.html
+++ b/admin/src/app/features/content-type/content-type.component.html
@@ -38,6 +38,14 @@
     (openDelete)="onDeleleSubmit($event)"
   ></app-content-type-list>
 
+  <!-- Pagination -->
+  <app-pagination
+    [total]="filter.total"
+    [limit]="filter.limit"
+    [page]="filter.page"
+    (pageChange)="onPageChange($event)"
+  />
+
   <!-- Popup Sửa -->
   <app-content-type-form
     *ngIf="isEditPopupOpen"
