--- a/admin/src/app/features/booking/booking-status-popup/booking-status-popup.component.html
+++ b/admin/src/app/features/booking/booking-status-popup/booking-status-popup.component.html
@@ -1,6 +1,6 @@
 <!-- Overlay -->
 <div
-  *ngIf="visible"
+  *ngIf="visible && booking"
   class="tw-fixed tw-inset-0 tw-bg-black/50 tw-z-50 tw-flex tw-items-center tw-justify-center"
 >
   <!-- Modal -->
