--- a/admin/src/app/features/room-class/room-class.component.html
+++ b/admin/src/app/features/room-class/room-class.component.html
@@ -2,79 +2,13 @@
   <h2>Quản lý loại phòng</h2>
 
   <!-- Controls -->
-  <div
-    class="room-controls"
-    style="display: flex; align-items: center; gap: 8px"
-  >
-    <div
-      class="form-floating form-floating-custom mb-3"
-      style="position: relative; flex: 1"
-    >
-      <input
-        type="email"
-        class="form-control"
-        id="floatingInput"
-        placeholder="name@example.com"
-        style="width: 100%; padding-right: 30px"
-        [(ngModel)]="filter.keyword"
-        (ngModelChange)="onFilterChange()"
-      />
-      <label for="floatingInput">Tìm kiếm</label>
-    </div>
-    <button class="add-room" (click)="onOpenPopup(true)">
-      + Thêm loại phòng
-    </button>
-  </div>
-  <!-- Filter -->
-  <div class="filter-bar">
-    <div>
-      <label for="statusFilter">Trạng thái:</label>
-      <select
-        id="statusFilter"
-        class="form-select"
-        [(ngModel)]="filter.status"
-        (ngModelChange)="onFilterChange()"
-      >
-        <option value="">Tất cả</option>
-        <option value="true">Kích hoạt</option>
-        <option value="false">Không kích hoạt</option>
-      </select>
-    </div>
-    <div>
-      <label for="featureFilter">Tiện nghi:</label>
-      <select
-        id="featureFilter"
-        class="form-select"
-        [(ngModel)]="filter.feature"
-        (ngModelChange)="onFilterChange()"
-      >
-        <option value="">Tất cả</option>
-        <option *ngFor="let feature of features" [value]="feature.id">
-          {{ feature.name }}
-        </option>
-      </select>
-    </div>
-    <div>
-      <label for="mainRoomClassFilter">Loại phòng chính:</label>
-      <select
-        id="mainRoomClassFilter"
-        class="form-select"
-        [(ngModel)]="filter.type"
-        (ngModelChange)="onFilterChange()"
-      >
-        <option value="">Tất cả</option>
-        <option *ngFor="let mrc of mainRoomClasses" [value]="mrc.id">
-          {{ mrc.name }}
-        </option>
-      </select>
-    </div>
-    <div>
-      <label>Sắp xếp:</label>
-      <button (click)="onFilterChange('status')">
-        Trạng thái: {{ filter.sortOrder === "asc" ? "↑" : "↓" }}
-      </button>
-    </div>
-  </div>
+  <app-room-class-filter
+    [filter]="filter"
+    [features]="features"
+    [mainRoomClasses]="mainRoomClasses"
+    (filterChange)="onFilterChange($event)"
+    (openPopup)="onOpenPopup(true)"
+  ></app-room-class-filter>
 
   <!-- Table Header -->
   <div class="table-header">
